fixed projectPage and navbar layout issue in smaller resolutions

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -3,7 +3,7 @@ body {
   font-family: 'Montserrat', sans-serif;
 }
 
-div#width.container {
+div.width.container {
   max-width: 100%;
 }
 
@@ -133,7 +133,7 @@ table a:hover {
   }
 }
 
-@media (max-width: 766px) {
+@media (max-width: 768px) {
   #logo {
     margin: auto;
     height: 150px;
@@ -143,7 +143,7 @@ table a:hover {
   }
   nav li .nav-link {
     margin-right: 2rem;
-  }
+  } 
   
   nav li:last-of-type .nav-link {
     border-right: none;
@@ -154,5 +154,17 @@ table a:hover {
   nav li .nav-link {
     letter-spacing: 0.1rem;
     margin-right: 0;
+  }
+}
+
+@media (max-width: 424px) {
+  ul.nav {
+    margin-left: 1.6rem;
+  }
+}
+
+@media (max-width: 363px) {
+  ul.nav {
+    margin-left: 1.2rem;
   }
 }
